I tried my best but still couldn't figure out how to implement dictionary in perfect hashing. After deadline, I again took time to review but Icouldn't find my bugs. That's all for now.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
-    <EditText
+    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/searchText"
-        android:hint="@string/Button2"
-        android:textColor="#000000"/>
+        android:id="@+id/HeyMan"
+        android:text="@string/Button1"/>
 </LinearLayout>
