--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,20 +7,15 @@
     android:orientation="vertical"
     tools:context=".Search"
     android:layout_margin="5dp">
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/searchText"
-        android:hint="@string/Button2"
-        android:textColor="#000000"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnSearch"
-        android:text="Search"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/showText"/>
-
+        android:id="@+id/Engtext"
+        android:textSize="40dp"
+        android:text="Search anything"/>
+    <Button
+        android:id="@+id/Whatsnow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/Button2"/>
 </LinearLayout>
