App doesn't crash now but not showing Bangla meaning

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="invisible"
+        android:layout_marginTop="20dp"
+        android:text=""
         android:id="@+id/result"
         android:gravity="left"/>
 
